--- a/support.html
+++ b/support.html
@@ -237,7 +237,7 @@
                 <li><a href="index.html#benefits" class="nav-link">Benefits</a></li>
                 <li><a href="Review.html" class="nav-link">Reviews</a></li>
                 <li><a href="vision.html" class="nav-link">Our Vision</a></li>
-                <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+                <li><a href="why.html" class="nav-link">Why Beetroot ?</a></li>
             </ul>
             <a href="index.html#order" class="cta-button">Order Now</a>
         </div>
