--- a/Review.html
+++ b/Review.html
@@ -168,7 +168,7 @@
                 <li><a href="index.html#products" class="nav-link">Products</a></li>
                 <li><a href="index.html#benefits" class="nav-link">Benefits</a></li>
                 <li><a href="Review.html" class="nav-link" style="color:var(--vibrant-magenta);font-weight:700;">Reviews</a></li>
-                <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+                <li><a href="why.html" class="nav-link">Why Beetroot ?</a></li>
             </ul>
             <a href="index.html#order" class="cta-button">Order Now</a>
         </div>
