--- a/FAQ.html
+++ b/FAQ.html
@@ -293,7 +293,7 @@
             </div>
             <div class="faq-item">
                 <button class="faq-question">Does BeetBOOST contain any dairy or lactose?</button>
-                <div class="faq-answer">No, BeetBOOST is completely dairy-free and lactose-free. It is made with coconut yogurt and beetroot.</div>
+                <div class="faq-answer">No, BeetBOOST is completely dairy-free and lactose-free. For a more detailed ingredients list refer to our ingredients list on our Home page or contact <a href="support.html" style="color:#C41E3A;text-decoration:underline;">Contact Support</a> page. page.</div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">Where is BeetBOOST produced?</button>
@@ -301,7 +301,7 @@
             </div>
             <div class="faq-item">
                 <button class="faq-question">What are the main health benefits of BeetBOOST?</button>
-                <div class="faq-answer">BeetBOOST is rich in plant protein, contains probiotics for gut health, is high in antioxidants, and supports natural energy and heart health.</div>
+                <div class="faq-answer">BeetBOOST is rich in plant protein (from soy protein isolate), contains probiotics for gut health, is high in antioxidants, and supports natural energy and heart health.</div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">Is BeetBOOST gluten-free?</button>
@@ -313,7 +313,7 @@
             </div>
             <div class="faq-item">
                 <button class="faq-question">Does BeetBOOST contain added sugars?</button>
-                <div class="faq-answer">BeetBOOST contains a small amount of cane sugar for taste, but no artificial sweeteners or high fructose corn syrup.</div>
+                <div class="faq-answer">BeetBOOST contains a small amount of Australian honey for taste, but no artificial sweeteners or high fructose corn syrup.</div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">Can children eat BeetBOOST?</button>
