--- a/FAQ.html
+++ b/FAQ.html
@@ -293,7 +293,7 @@
             </div>
             <div class="faq-item">
                 <button class="faq-question">Does BeetBOOST contain any dairy or lactose?</button>
-                <div class="faq-answer">No, BeetBOOST is completely dairy-free and lactose-free. For a more detailed ingredients list refer to our ingredients list on our Home page or contact <a href="support.html" style="color:#C41E3A;text-decoration:underline;">Contact Support</a> page. page.</div>
+                <div class="faq-answer">No, BeetBOOST is completely dairy-free and lactose-free. For a more detailed ingredients list refer to our ingredients list on our Home page or contact <a href="support.html" style="color:#C41E3A;text-decoration:underline;">Contact Support</a> page.</div>
             </div>
             <div class="faq-item">
                 <button class="faq-question">Where is BeetBOOST produced?</button>
