--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         /* --- Nutrition Section Background --- */
         .nutrition-section {
-            background: <img src="Background.jpg"> center center/cover no-repeat;
+            background: url ('Background.jpg') center center/cover no-repeat;
             position: relative;
             padding: 4rem 0;
         }
