--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         /* --- Nutrition Section Background --- */
         .nutrition-section {
-            background: url ('Background.jpg') center center/cover no-repeat;
+            background: url('Background.jpg') center center/cover no-repeat;
             position: relative;
             padding: 4rem 0;
         }
@@ -366,9 +366,20 @@
 
         /* Fixed Nutrition Section Layout */
         .nutrition-section {
-            background: var(--soft-rose);
+            background-image: url('Background.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            position: relative;
             padding: 4rem 0;
-        }
+}
+        .nutrition-section::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: rgba(255,255,255,0.85);
+            pointer-events: none;
+            z-index: 0;
         
         .nutrition-table-container {
             max-width: 800px;
@@ -445,10 +456,22 @@
             }
         }
 
-        .benefits-section {
-            padding: 6rem 0;
-            background: linear-gradient(135deg, var(--soft-rose) 0%, var(--earthy-cream) 100%);
-        }
+            .benefits-section {
+                background-image: url('Background.jpg');
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                position: relative;
+                padding: 6rem 0;
+}
+            .benefits-section::before {
+                content: '';
+                position: absolute;
+                inset: 0;
+                background: rgba(255,255,255,0.82);
+                pointer-events: none;
+                z-index: 0;
+}
 
         .benefits-grid {
             display: grid;
