--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         }
         /* --- Nutrition Section Background --- */
         .nutrition-section {
-            background: url('Background.jpg') center center/cover no-repeat;
+            background-image: url('Background.jpg') center center/cover no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             position: relative;
             padding: 4rem 0;
         }
@@ -380,7 +383,7 @@
             background: rgba(255,255,255,0.85);
             pointer-events: none;
             z-index: 0;
-        
+        }
         .nutrition-table-container {
             max-width: 800px;
             margin: 0 auto;
@@ -472,7 +475,6 @@
                 pointer-events: none;
                 z-index: 0;
 }
-
         .benefits-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
