--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
         /* --- Nutrition Section Background --- */
         .nutrition-section {
-            background-image: url('Background.jpg') center center/cover no-repeat;
+            background-image: url('Background.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -458,7 +458,6 @@
                 padding: 1rem;
             }
         }
-
             .benefits-section {
                 background-image: url('Background.jpg');
                 background-size: cover;
@@ -481,7 +480,7 @@
             gap: 2rem;
             margin-top: 3rem;
         }
-
+        
         .benefit-item {
             background: var(--pure-white);
             padding: 2rem;
@@ -562,7 +561,7 @@
             position: absolute;
             inset: 0;
             z-index: 0;
-            background: <img src="Perth.jpg"> center center/cover no-repeat;
+            background: url('Perth.jpg');
             opacity: 0.45;
             filter: brightness(0.7) blur(1px);
         }
