--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             --text-dark: #2C2C2C;
             --text-light: #666666;
         }
-        /* --- Nutrition Section Background --- */
+                /* Corrected Nutrition Section */
         .nutrition-section {
             background-image: url('Background.jpg');
             background-size: cover;
@@ -34,11 +34,6 @@
             background: rgba(255,255,255,0.85);
             pointer-events: none;
             z-index: 0;
-        }
-        .nutrition-section > .nutrition-table-container,
-        .nutrition-section > .nutrition-table-container * {
-            position: relative;
-            z-index: 1;
         }
         body {
             font-family: 'Poppins', sans-serif;
@@ -392,6 +387,7 @@
             box-shadow: 0 6px 24px rgba(139, 21, 56, 0.08);
             padding: 2rem;
             position: relative;
+            z-index: 1;
         }
         
         .nutrition-header-flex {
@@ -458,21 +454,22 @@
                 padding: 1rem;
             }
         }
-            .benefits-section {
-                background-image: url('Background.jpg');
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-                position: relative;
-                padding: 6rem 0;
-}
-            .benefits-section::before {
-                content: '';
-                position: absolute;
-                inset: 0;
-                background: rgba(255,255,255,0.82);
-                pointer-events: none;
-                z-index: 0;
+           /* Corrected Benefits Section */
+        .benefits-section {
+            background-image: url('Background.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            position: relative;
+            padding: 6rem 0;
+        }
+        .benefits-section::before {
+            content: '';
+            position: absolute;
+            inset: 0;
+            background: rgba(255,255,255,0.82);
+            pointer-events: none;
+            z-index: 0;
 }
         .benefits-grid {
             display: grid;
